@@ -4,64 +4,4 @@ license = Perl_5
 copyright_holder = Tom Molesworth
 copyright_year   = 2016
 
-[Git::GatherDir]
-exclude_filename = Makefile.PL
-[PruneCruft]
-;[PruneFiles]
-[ManifestSkip]
-[MetaYAML]
-[License]
-[Readme]
-[MakeMaker]
-eumm_version = 6.48
-prereq_fatal = 1
-[ExecDir]
-[ShareDir]
-dir = share
-[Manifest]
-[TestRelease]
-[ConfirmRelease]
-[UploadToCPAN]
-[Prereqs::FromCPANfile]
-[Prereqs / BuildRequires]
-perl = 5.014000
-[CheckPrereqsIndexed]
-[CheckExtraTests]
-[NextRelease]
-[RewriteVersion]
-[OurPkgVersion]
-[Homepage]
-[Bugtracker]
-[InstallGuide]
-[MetaJSON]
-[InsertExample]
-[PodInherit]
-[PodSyntaxTests]
-[MojibakeTests]
-[Test::CheckDeps]
-[Test::Compile]
-[Test::Synopsis]
-; [Test::EOL]
-[Test::Version]
-; [Test::Pod::LinkCheck]
-; [PodCoverageTests]
-; [Test::UnusedVars]
-[Test::ReportPrereqs]
-[SpellingCommonMistakesTests]
-[Signature]
-[CopyFilesFromBuild]
-copy = Makefile.PL
-;[Git::Check]
-;allow_dirty = dist.ini
-;changelog = Changes
-[Git::Commit]
-allow_dirty = dist.ini
-allow_dirty = cpanfile
-allow_dirty = Changes
-allow_dirty = Makefile.PL
-[Git::Tag]
-tag_format = v%v
-tag_message = Tag v%v for CPAN release
-[ReversionOnRelease]
-[InstallRelease]
-
+[@Author::TEAM]
